<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <!--    <group android:checkableBehavior="single">-->

    <!--        <item android:title="Account" >-->
    <!--            <menu>-->
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/baseline_person_white_24"
        android:title="@string/profile_navigation" />

    <item
        android:id="@+id/nav_my_cases"
        android:icon="@drawable/baseline_whatshot_white_24"
        android:title="@string/mycases_navigation" />
    <item
        android:id="@+id/nav_following_cases"
        android:icon="@drawable/baseline_group_add_white_24"
        android:title="@string/following_cases_navigation" />
    <!--            </menu>-->
    <!--        </item>-->
    <!--    </group>-->


    <!--    <item-->
    <!--        android:id="@+id/nav_slideshow"-->
    <!--        android:icon="@drawable/ic_menu_slideshow"-->
    <!--        android:title="Settings" />-->
    <item
        android:id="@+id/rate_nav"
        android:icon="@drawable/baseline_star_rate_white_24"
        android:title="@string/action_rate" />
    <item
        android:id="@+id/share_nav"
        android:icon="@drawable/baseline_share_white_24"
        android:title="@string/action_share" />

    <item
        android:id="@+id/nav_sign_out"
        android:icon="@drawable/baseline_power_settings_new_white_24"
        android:title="@string/sign_out" />


</menu>
