<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_settings"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_size"
        android:background="@color/primary"
        android:theme="@style/ToolbarColoredBackArrow"
        app:popupTheme="@style/AppTheme.PopupOverlay" />


    <com.hossam.emergency.utils.CoolTextView
        android:id="@+id/language_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar_settings"
        android:layout_margin="16dp"
        android:text="@string/language_text"
        android:textSize="@dimen/page_title" />

    <RadioGroup
        android:id="@+id/language_radio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/language_text"
        android:layout_margin="16dp"
        android:gravity="start"
        android:onClick="onCheckedRadioButton"
        android:theme="@style/radiobutton_style">

        <RadioButton
            android:id="@+id/arabic_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/arabic_lang"
            android:textColor="@color/primary_dark" />

        <RadioButton
            android:id="@+id/english_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/english_lang"
            android:textColor="@color/primary_dark" />

    </RadioGroup>

    <com.hossam.emergency.utils.CoolButton
        android:id="@+id/save_settings_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/btn_green_dialog"
        android:onClick="onSaveSettingsClick"
        android:text="@string/save_settings"
        android:textColor="@color/white"
        android:textSize="18sp" />

</RelativeLayout>